--- a/minimalbasiccalculator.html
+++ b/minimalbasiccalculator.html
@@ -1,6 +1,6 @@
 <html> 
 <head> 
-	<!-- CSS Part -->
+<!--CSS Starts-->
 	<style> 
 		.main{ 
 		margin: auto;
@@ -42,6 +42,7 @@
 		width:100% 
 		} 
 	</style> 
+<!--CSS Ends-->
 </head> 
 <!-- create table -->
 <body> 
@@ -88,7 +89,7 @@
 	</div>
 </body> 
 
-<!-- JS Part -->
+<!--JS Starts-->
 <script> 
 		//function that display value 
 		function dis(val) 
@@ -110,4 +111,5 @@
 			document.getElementById("result").value = "" 
 		} 
 	</script> 
+<!--JS Ends-->
 </html> 
